[package]
name = "joker-sys"
version = "0.1.0"
authors = ["chris@indefini.org"]

links = "joker"
build = "build.rs"

[dependencies]
#libc = "0.1"
libc = "*"

[dependencies.cypher-sys]
path = "/home/chris/code/cypher"
#git = "ssh://git@gitlab.com/indefini/cypher.git"

[build-dependencies]
pkg-config = "0.3"
gcc = "0.3"

